fixes #252 - Make it possible to disableSequenceFiltering per test or globally

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -2,6 +2,7 @@ cacheConnection: false
 cacheTableNames: false
 leakHunter: true
 raiseExceptionOnCleanUp: true
+disableSequenceFiltering: true
 expectedDbType: HSQLDB
 mergingStrategy: CLASS
 caseInsensitiveStrategy: LOWERCASE
