--- a/rider-core/pom.xml
+++ b/rider-core/pom.xml
@@ -74,10 +74,18 @@
             <version>2.2.28</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.192</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>3.2.1</version>
             <scope>test</scope>
         </dependency>
 
