refs #253 Adds quarkus postgres sample

--- a/rider-examples/pom.xml
+++ b/rider-examples/pom.xml
@@ -17,6 +17,7 @@
         <module>dbunit-tomee-appcomposer-sample</module>
 	    <module>spring-boot-dbunit-sample</module>
         <module>quarkus-dbunit-sample</module>
+        <module>quarkus-postgres-sample</module>
         <module>rider-micronaut</module>
     </modules>
 
