--- a/rider-examples/quarkus-postgres-sample/pom.xml
+++ b/rider-examples/quarkus-postgres-sample/pom.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.21.1-SNAPSHOT</version>
+        <version>1.21.1</version>
     </parent>
     <artifactId>quarkus-postgres-sample</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.21.1</version>
     <description>This sample project was created by Alexei Bratuhin(@coiouhkc github user) as a reproducer for issue #253 </description>
 
     <properties>
