--- a/rider-examples/quarkus-postgres-sample/pom.xml
+++ b/rider-examples/quarkus-postgres-sample/pom.xml
@@ -4,10 +4,10 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.22.0</version>
+        <version>1.22.1-SNAPSHOT</version>
     </parent>
     <artifactId>quarkus-postgres-sample</artifactId>
-    <version>1.22.0</version>
+    <version>1.22.1-SNAPSHOT</version>
     <description>This sample project was created by Alexei Bratuhin(@coiouhkc github user) as a reproducer for issue #253 </description>
 
     <properties>
