--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.23.0</version>
+        <version>1.23.1-SNAPSHOT</version>
     </parent>
 
      <artifactId>rider-quarkus-sample</artifactId>
