--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: DBRider Build
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
@@ -33,7 +37,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: 8
+          java-version: '1.8'
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
@@ -41,7 +45,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Test
-        run: mvn verify jacoco:report coveralls:report -Pcoverage surefire-report:report-only
+        run: mvn -X verify jacoco:report coveralls:report -Pcoverage
       - name: sonar
         run: mvn sonar:sonar -Psonar -Dsonar.organization=database-rider -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} -Dsonar.scanner.force-deprecated-java-version-grace-period=true ; fi ;
         if: steps.extract_branch.outputs.branch == 'master'
