--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
-          java-version: '1.8'
+          java-version: 11.0.4
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
