--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jacoco.version>0.8.3</jacoco.version>
         <ds.version>1.6.0</ds.version>
+        <testcontainers.version>1.15.3</testcontainers.version>
     </properties>
 
     <dependencies>
