--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11.0.4
+          distribution: 'adopt'
+          java-version: '11'
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
@@ -71,13 +72,18 @@ jobs:
     env:
       MAVEN_USER: ${{ secrets.MAVEN_USER }}
       MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
-      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 11.0.4
+          distribution: 'adopt'
+          java-version: '11'
+          server-id: releases
+          server-username: MAVEN_USER
+          server-password: MAVEN_PASS
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: GPG_PASSPHRASE
       - uses: actions/cache@v1
         with:
           path: ~/.m2/repository
@@ -88,5 +94,5 @@ jobs:
         run: mvn deploy --settings settings.xml -DskipTests=true -Darguments="-DskipTests -Dmaven.test.skip=true"
         if: "contains(github.ref, 'master') && !contains(github.event.head_commit.message, 'prepare release')"
       - name: Release
-        run: mvn -B deploy --settings settings.xml -Prelease -DskipTests -Darguments="-DskipTests -Dmaven.test.skip=true"
+        run: mvn deploy -Prelease -DskipTests -Darguments="-DskipTests -Dmaven.test.skip=true"
         if: "contains(github.ref, 'master') && contains(github.event.head_commit.message, 'prepare release')"
