--- a/rider-examples/quarkus-postgres-sample/pom.xml
+++ b/rider-examples/quarkus-postgres-sample/pom.xml
@@ -124,6 +124,7 @@
                     <systemPropertyVariables>
                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                         <maven.home>${maven.home}</maven.home>
+                        <maven.settings>${session.request.userSettingsFile.path}</maven.settings>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
