--- a/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
+++ b/rider-examples/jOOQ-DBUnit-flyway-example/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.23.2-SNAPSHOT</version>
+        <version>1.23.1</version>
     </parent>
 
     <artifactId>jooq-dbunit-flyway-example</artifactId>
@@ -156,6 +156,14 @@
                             <directory>target/generated-sources/jooq-h2</directory>
                         </target>
                     </generator>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
         </plugins>
