--- a/rider-examples/jpa-productivity-boosters/pom.xml
+++ b/rider-examples/jpa-productivity-boosters/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.23.2-SNAPSHOT</version>
+        <version>1.23.1</version>
     </parent>
 
     <artifactId>jpa-productivity-boosters</artifactId>
@@ -210,6 +210,14 @@
                             error
                         </org.slf4j.simpleLogger.defaultLogLevel>
                     </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
 
