--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.database-rider</groupId>
         <artifactId>rider-examples</artifactId>
-        <version>1.23.2-SNAPSHOT</version>
+        <version>1.23.1</version>
     </parent>
 
      <artifactId>rider-quarkus-sample</artifactId>
@@ -154,9 +154,6 @@
     <profiles>
         <profile>
             <id>coverage</id>
-            <properties>
-                <jacoco.version>0.8.3</jacoco.version>
-            </properties>
             <build>
                 <plugins>
                     <plugin>
