- Updates to latest surefire plugin - increments pom version

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>rider-parent</artifactId>
     <packaging>pom</packaging>
     <!-- tag::version[] -->
-    <version>1.23.1</version>
+    <version>1.23.2-SNAPSHOT</version>
     <!-- end::version[] -->
 
     <modules>
@@ -63,18 +63,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jacoco.version>0.8.6</jacoco.version>
         <ds.version>1.6.0</ds.version>
+        <surefire.version>3.0.0-M5</surefire.version>
         <testcontainers.version>1.15.3</testcontainers.version>
     </properties>
 
     <dependencies>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>provided</scope>
         </dependency>
-
         <!-- test -->
         <dependency>
             <groupId>org.hsqldb</groupId>
@@ -142,8 +141,8 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
                 <configuration>
                     <includes>
                         <include>**/*It.java</include>
@@ -156,19 +155,6 @@
                             src/test/resources/logging.properties
                         </java.util.logging.config.file>
                     </systemPropertyVariables>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
-                <configuration>
-                    <aggregate>true</aggregate>
-                    <includes>
-                        <include>**/*It.java</include>
-                        <include>**/*Test.java</include>
-                        <include>**/*Feature.java</include>
-                        <include>**/*Bdd.java</include>
-                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -192,6 +178,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
                     <version>2.8.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${surefire.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -269,7 +260,6 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
                         <configuration>
                             <includes>
                                 <include>**/*It.java</include>
@@ -369,8 +359,8 @@
                         </configuration>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
                         <configuration>
                             <skipTests>true</skipTests>
                         </configuration>
