--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>rider-parent</artifactId>
         <groupId>com.github.database-rider</groupId>
-        <version>1.23.1</version>
+        <version>1.23.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rider-junit5</artifactId>
@@ -126,27 +126,11 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.1.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <source>8</source>
-                </configuration>
-            </plugin>
-            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
                 <configuration>
-                    <parallel>classes</parallel>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
                     <reuseForks>false</reuseForks>
+                    <threadCount>2</threadCount>
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*It.java</include>
