--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2.1.0
         with:
+          distribution: 'adopt'
           java-version: ${{ matrix.java }}
       - uses: actions/cache@v1
         with:
@@ -35,7 +36,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v2.1.0
         with:
           distribution: 'adopt'
           java-version: '11'
@@ -75,7 +76,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v2.1.0
         with:
           distribution: 'adopt'
           java-version: '11'
