--- a/rider-junit5/src/test/resources/datasets/expectedUsersAndTweetsSuperclass.yml
+++ b/rider-junit5/src/test/resources/datasets/expectedUsersAndTweetsSuperclass.yml
@@ -7,3 +7,6 @@ TWEET:
   - ID: "before-each"
     CONTENT: "tweet before each!"
     likes: 10
+  - ID: "before-each-superclass"
+    CONTENT: "tweet before each on superclass!"
+    likes: 19
