--- a/rider-examples/quarkus-dbunit-sample/pom.xml
+++ b/rider-examples/quarkus-dbunit-sample/pom.xml
@@ -10,14 +10,13 @@
      <artifactId>rider-quarkus-sample</artifactId>
 
      <properties>
-        <quarkus.version>1.7.0.Final</quarkus.version>
+        <quarkus.version>1.13.7.Final</quarkus.version>
         <surefire.version>2.22.1</surefire.version>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    
      <dependencyManagement>
         <dependencies>
             <dependency>
@@ -84,6 +83,12 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -191,6 +196,5 @@
                 </dependency>
             </dependencies>
         </profile>
-
     </profiles>
 </project>
