refs #332 Updates quarkus sample to use panache repository and add connection leak test

--- a/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/quarkus-dbunit-sample/src/main/resources/application.properties
@@ -6,8 +6,9 @@ quarkus.datasource.jdbc.driver = org.postgresql.Driver
 quarkus.datasource.jdbc.username = cdbookstoreDB
 # unencrypted password is fine for the showcase but don't do it in a real application!
 quarkus.datasource.jdbc.password = h2g2
-quarkus.datasource.jdbc.max-size=20
+quarkus.datasource.jdbc.max-size=5
 quarkus.datasource.jdbc.min-size=5
+quarkus.datasource.jdbc.initial-size=5
 
 
 quarkus.hibernate-orm.database.generation=drop-and-create
@@ -28,6 +29,9 @@ quarkus.log.category."com.github".level=WARN
 # TEST
 %test.quarkus.datasource.jdbc.url = jdbc:h2:mem:cdbookstoreDB
 %test.quarkus.datasource.jdbc.driver = org.h2.Driver
+%test.quarkus.datasource.jdbc.max-size=5
+%test.quarkus.datasource.jdbc.min-size=5
+%test.quarkus.datasource.jdbc.initial-size=5
 
 #TODO in issue #329 %test.quarkus.datasource.jdbc."secondary".url = jdbc:h2:mem:cdbookstoreSecondaryDB
 #TODO in issue #329 %test.quarkus.datasource.jdbc."secondary".driver = org.h2.Driver
