refs #332 - small refactory in junit5 extension  - adds tests with cacheConnection=false for springboot sample

--- a/rider-examples/spring-boot-dbunit-sample/src/main/resources/application.properties
+++ b/rider-examples/spring-boot-dbunit-sample/src/main/resources/application.properties
@@ -12,6 +12,8 @@ user.datasource.username = sa
 user.datasource.password =
 user.datasource.testWhileIdle = true
 user.datasource.validationQuery = SELECT 1
+user.datasource.configuration.maximum-pool-size = 2
+user.datasource.configuration.leakDetectionThreshold=10000
 
 #company datasource
 company.datasource.url = jdbc:hsqldb:mem:company;DB_CLOSE_DELAY=-1
@@ -19,6 +21,8 @@ company.datasource.username = sa
 company.datasource.password =
 company.datasource.testWhileIdle = true
 company.datasource.validationQuery = SELECT 1
+company.datasource.configuration.maximum-pool-size = 2
+company.datasource.configuration.leakDetectionThreshold=10000
 
 # ===============================
 # = JPA / HIBERNATE
@@ -40,3 +44,5 @@ spring.jpa.hibernate.naming.implicit-strategy = org.springframework.boot.orm.jpa
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HSQLDialect
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
+logging.level.com.zaxxer.hikari=TRACE
