Update documentation and example file

--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -3,6 +3,8 @@ cacheTableNames: false
 leakHunter: true
 raiseExceptionOnCleanUp: true
 disableSequenceFiltering: true
+alwaysCleanBefore: true
+alwaysCleanAfter: true
 expectedDbType: HSQLDB
 mergingStrategy: CLASS
 caseInsensitiveStrategy: LOWERCASE
