--- a/rider-core/src/test/resources/datasets/yml/random-replacements.yml
+++ b/rider-core/src/test/resources/datasets/yml/random-replacements.yml
@@ -1,9 +1,9 @@
 TWEET:
-  - ID: "js:Math.floor(Math.random() * (100))"
+  - ID: "js:1+Math.floor(Math.random() * (1000))"
     CONTENT: "groovy: UUID.randomUUID().toString()"
     DATE: "groovy:new Date()"
     USER_ID: 1
-  - ID: "js:Math.floor(Math.random() * (100))"
+  - ID: "js:2+Math.floor(Math.random() * (1000))"
     CONTENT: "groovy: UUID.randomUUID().toString()"
     DATE: "groovy:new Date()"
     USER_ID: 1
