--- a/pom.xml
+++ b/pom.xml
@@ -259,8 +259,11 @@
                         </dependencies>
                     </plugin>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
+                            <reuseForks>false</reuseForks>
+                            <threadCount>2</threadCount>
                             <includes>
                                 <include>**/*It.java</include>
                                 <include>**/*Test.java</include>
