- Only execute script assert if there's a script expression in expected dataset - Adds failure scenario for script assert in it tests

--- a/rider-core/src/test/resources/datasets/yml/expectedUserWithScripting.yml
+++ b/rider-core/src/test/resources/datasets/yml/expectedUserWithScripting.yml
@@ -1,5 +1,5 @@
 USER:
   - ID: "js:(value > 0)"
-    NAME: "@realpestano"
+    NAME: "js:(value != null && value.contains('@realpestano'))"
   - ID: "groovy:(value > 0)"
-    NAME: "@dbunit"
+    NAME: "groovy:(value != null && value.contains('@dbunit'))"
