--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>rider-parent</artifactId>
         <groupId>com.github.database-rider</groupId>
-        <version>1.30.1-SNAPSHOT</version>
+        <version>1.31.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rider-junit5</artifactId>
