--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -134,6 +134,7 @@
                     <includes>
                         <include>**/Test*.java</include>
                         <include>**/*It.java</include>
+                        <include>**/*ItDeprecated.java</include>
                         <include>**/*Test.java</include>
                     </includes>
                 </configuration>
