--- a/rider-core/src/test/resources/config/sample-dbunit.yml
+++ b/rider-core/src/test/resources/config/sample-dbunit.yml
@@ -7,6 +7,7 @@ alwaysCleanBefore: true
 alwaysCleanAfter: true
 expectedDbType: HSQLDB
 mergingStrategy: CLASS
+columnSensing: true
 caseInsensitiveStrategy: LOWERCASE
 disablePKCheckFor: ["NoPKTable"]
 properties:
