--- a/rider-examples/rider-micronaut/src/main/resources/application.yml
+++ b/rider-examples/rider-micronaut/src/main/resources/application.yml
@@ -6,7 +6,7 @@ jackson:
 ---
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
     password: ''
