--- a/rider-core/pom.xml
+++ b/rider-core/pom.xml
@@ -22,6 +22,10 @@
             		<groupId>postgresql</groupId>
             		<artifactId>postgresql</artifactId>
             	</exclusion>
+                <exclusion>
+                    <groupId>commons-collections</groupId>
+                    <artifactId>commons-collections</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
